solved layout overflow problem

--- a/src/nbsap/static/bootstrap/less/header.less
+++ b/src/nbsap/static/bootstrap/less/header.less
@@ -336,6 +336,7 @@
 }
 
 .search-form {
+    display: none;
     @media (max-width: 800px) {
         display: none;
     }
